--- a/style.css
+++ b/style.css
@@ -1,19 +1,15 @@
 @import url("https://rsms.me/inter/inter-ui.css");
-/* line 2, style.scss */
 body {
   font-family: 'Inter UI', sans-serif;
   background-color: #222C36; }
 
-/* line 6, style.scss */
 a {
   text-decoration: none; }
 
-/* line 9, style.scss */
 #search-form {
   margin-top: 15em;
   text-align: center; }
 
-/* line 13, style.scss */
 #search-bar {
   background-color: transparent;
   border: none;
@@ -28,22 +24,18 @@ a {
   color: #ececec;
   margin: 0px; }
 
-/* line 27, style.scss */
 #searchbar:hover, #searchbar:active, #searchbar:focus {
   box-shadow: 0px 5px 20px rgba(37, 37, 63, 0.3); }
 
-/* line 30, style.scss */
 #submit-button {
   display: none; }
 
-/* line 31, style.scss */
 #link-section {
   max-width: 900px;
   padding-top: 100px;
   margin: auto;
   text-align: center; }
 
-/* line 39, style.scss */
 .link-box-wrapper {
   display: inline-block;
   margin: 10px;
@@ -52,35 +44,96 @@ a {
   padding: 10px;
   border-radius: 15px; }
 
-/* line 47, style.scss */
 .link-box-wrapper:hover {
-  background-color: rgba(0, 0, 0, 0.1); }
+  background-color: rgba(65, 73, 80, 0.25); }
 
-/* line 50, style.scss */
 .link-box {
   display: block;
   width: 100%;
   height: 100%;
   padding-top: 10px; }
 
-/* line 56, style.scss */
 .box-image-wrapper {
   height: 50px;
   width: 80px;
   text-align: center;
   margin: auto; }
 
-/* line 62, style.scss */
 .link-box img {
   position: relative;
   max-width: 80px;
   max-height: 50px;
   border-radius: 15px; }
 
-/* line 68, style.scss */
 .link-box .name {
   position: relative;
   font-size: 16px;
   color: white;
   width: 100%;
   text-align: center; }
+
+#open-modal {
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  height: 100px;
+  width: 100px;
+  border-radius: 100px 0px 0px 0px;
+  color: transparent;
+  transition: cubic-bezier(0.04, 0.67, 0.42, 0.92) 0.25s; }
+
+#open-modal:hover {
+  color: white;
+  background-color: rgba(65, 73, 80, 0.25); }
+
+.modal-placeholder {
+  display: none;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  top: 0px;
+  left: 0px;
+  overflow: hidden;
+  animation: animateModal 1s cubic-bezier(0.04, 0.67, 0.42, 0.92);
+  background-color: rgba(0, 0, 0, 0.1); }
+  .modal-placeholder .modal {
+    background-color: #414950;
+    padding: 40px;
+    border-radius: 8px;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+    width: 90%;
+    max-width: 600px;
+    height: 90%;
+    max-height: 300px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    margin: auto; }
+    .modal-placeholder .modal h1 {
+      color: white; }
+    .modal-placeholder .modal .content {
+      position: relative; }
+      .modal-placeholder .modal .content label {
+        color: #bbbbbb; }
+      .modal-placeholder .modal .content input {
+        display: block;
+        margin: 10px 0px 20px 0px; }
+      .modal-placeholder .modal .content button {
+        position: absolute;
+        right: 0px;
+        bottom: -30px; }
+
+@keyframes animateModal {
+  0% {
+    top: -1000px;
+    scale: 0.7;
+    background-color: transparent; }
+  50% {
+    top: 0px;
+    scale: 1;
+    background-color: transparent; }
+  100% {
+    background-color: rgba(0, 0, 0, 0.1); } }
+.show-flex {
+  display: flex; }
