--- a/style.css
+++ b/style.css
@@ -1,19 +1,76 @@
 @import url("https://rsms.me/inter/inter-ui.css");
+*,
+:before,
+:after {
+  box-sizing: border-box;
+}
+
+html, body {
+  min-height: 100%;
+}
+
 body {
   font-family: 'Inter UI', sans-serif;
-  background-color: #222C36; }
+  background-color: #222C36;
+}
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
+button {
+  -webkit-appearance: none;
+  background: -webkit-gradient(to right, #a2ccb6 0%, #fceeb5 50%, #ee786e 100%);
+  background: linear-gradient(to right, #a2ccb6 0%, #fceeb5 50%, #ee786e 100%);
+  background-size: 500%;
+  border: none;
+  border-radius: 5rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  color: #fff;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: bold;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  height: 3rem;
+  letter-spacing: 0.05em;
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 100%;
+}
+
+button:hover {
+  animation-name: gradient;
+  -webkit-animation-name: gradient;
+  animation-duration: 2s;
+  -webkit-animation-duration: s;
+  animation-iteration-count: 1;
+  -webkit-animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  -webkit-animation-fill-mode: forwards;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100%;
+  }
+}
 #search-form {
   margin-top: 15em;
-  text-align: center; }
+  text-align: center;
+}
 
 #search-bar {
   background-color: transparent;
   border: none;
-  border-bottom: 3px solid white;
+  border-bottom: 3px solid rgba(162, 204, 182, 0.25);
   width: 300px;
   padding: 5px 0px 10px 0px;
   min-width: 30%;
@@ -22,55 +79,64 @@ a {
   font-size: 1.5em;
   outline: none;
   color: #ececec;
-  margin: 0px; }
+  margin: 0px;
+  transition: ease-in-out 0.75s;
+}
 
-#searchbar:hover, #searchbar:active, #searchbar:focus {
-  box-shadow: 0px 5px 20px rgba(37, 37, 63, 0.3); }
+#search-bar:hover, #search-bar:active, #search-bar:focus {
+  border-bottom: 3px solid rgba(162, 204, 182, 0.8);
+}
 
 #submit-button {
-  display: none; }
+  display: none;
+}
 
 #link-section {
   max-width: 900px;
   padding-top: 100px;
   margin: auto;
-  text-align: center; }
+  text-align: center;
+}
 
 .link-box-wrapper {
   display: inline-block;
   margin: 10px;
-  height: 105px;
-  width: 120px;
-  padding: 10px;
-  border-radius: 15px; }
+  max-width: 250px;
+  border-radius: 15px;
+  transition: background-color ease-in-out 0.25s;
+}
 
-.link-box-wrapper:hover {
-  background-color: rgba(65, 73, 80, 0.25); }
+.link-box-wrapper:hover, .link-box-wrapper:active, .link-box-wrapper:focus {
+  background-color: rgba(12, 4, 32, 0.1);
+}
 
 .link-box {
   display: block;
-  width: 100%;
-  height: 100%;
-  padding-top: 10px; }
+  padding: 15px 30px 18px 30px;
+}
 
 .box-image-wrapper {
-  height: 50px;
-  width: 80px;
-  text-align: center;
-  margin: auto; }
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+  vertical-align: middle;
+}
 
 .link-box img {
   position: relative;
-  max-width: 80px;
-  max-height: 50px;
-  border-radius: 15px; }
+  max-width: 16px;
+  max-height: 16px;
+  border-radius: 15px;
+}
 
 .link-box .name {
   position: relative;
   font-size: 16px;
   color: white;
-  width: 100%;
-  text-align: center; }
+  display: inline;
+  vertical-align: middle;
+  padding-left: 10px;
+}
 
 #open-modal {
   position: fixed;
@@ -80,11 +146,13 @@ a {
   width: 100px;
   border-radius: 100px 0px 0px 0px;
   color: transparent;
-  transition: cubic-bezier(0.04, 0.67, 0.42, 0.92) 0.25s; }
+  transition: opacity ease-in-out 0.75s;
+  opacity: 0;
+}
 
 #open-modal:hover {
-  color: white;
-  background-color: rgba(65, 73, 80, 0.25); }
+  opacity: 1;
+}
 
 .modal-placeholder {
   display: none;
@@ -96,44 +164,93 @@ a {
   top: 0px;
   left: 0px;
   overflow: hidden;
-  animation: animateModal 1s cubic-bezier(0.04, 0.67, 0.42, 0.92);
-  background-color: rgba(0, 0, 0, 0.1); }
-  .modal-placeholder .modal {
-    background-color: #414950;
-    padding: 40px;
-    border-radius: 8px;
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    max-width: 600px;
-    height: 90%;
-    max-height: 300px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    margin: auto; }
-    .modal-placeholder .modal h1 {
-      color: white; }
-    .modal-placeholder .modal .content {
-      position: relative; }
-      .modal-placeholder .modal .content label {
-        color: #bbbbbb; }
-      .modal-placeholder .modal .content input {
-        display: block;
-        margin: 10px 0px 20px 0px; }
-      .modal-placeholder .modal .content button {
-        position: absolute;
-        right: 0px;
-        bottom: -30px; }
+  animation: animateModal 0.75s cubic-bezier(0.04, 0.67, 0.42, 0.92);
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.modal-placeholder .close-modal-placeholder {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+.modal-placeholder .modal {
+  background-color: #414950;
+  border-radius: 8px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  max-width: 600px;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  margin: auto;
+}
+.modal-placeholder .modal h1 {
+  color: white;
+}
+.modal-placeholder .modal .content {
+  margin: 40px;
+  position: relative;
+}
+.modal-placeholder .modal .content .group {
+  position: relative;
+  margin: 45px 0;
+}
+.modal-placeholder .modal .content textarea {
+  resize: none;
+}
+.modal-placeholder .modal .content input,
+.modal-placeholder .modal .content textarea {
+  background: none;
+  color: #efefef;
+  font-size: 18px;
+  padding: 10px 10px 10px 5px;
+  display: block;
+  width: 100%;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid #efefef;
+}
+.modal-placeholder .modal .content input:focus,
+.modal-placeholder .modal .content textarea:focus {
+  outline: none;
+}
+.modal-placeholder .modal .content input:focus ~ label, .modal-placeholder .modal .content input:valid ~ label,
+.modal-placeholder .modal .content textarea:focus ~ label,
+.modal-placeholder .modal .content textarea:valid ~ label {
+  top: -14px;
+  font-size: 12px;
+  color: #a2ccb6;
+}
+.modal-placeholder .modal .content input:focus ~ .bar:before,
+.modal-placeholder .modal .content textarea:focus ~ .bar:before {
+  width: 100%;
+}
+.modal-placeholder .modal .content label {
+  color: #efefef;
+  font-size: 16px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 10px;
+  transition: 300ms ease all;
+}
 
 @keyframes animateModal {
   0% {
     top: -1000px;
     scale: 0.7;
-    background-color: transparent; }
+    background-color: transparent;
+  }
   50% {
     top: 0px;
     scale: 1;
-    background-color: transparent; }
+    background-color: transparent;
+  }
   100% {
-    background-color: rgba(0, 0, 0, 0.1); } }
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+}
 .show-flex {
-  display: flex; }
+  display: flex;
+}
