Added support for removing and editing links

--- a/style.css
+++ b/style.css
@@ -19,17 +19,8 @@ a {
 }
 
 button {
-  -webkit-appearance: none;
-  background: -webkit-gradient(to right, #a2ccb6 0%, #fceeb5 50%, #ee786e 100%);
-  background: linear-gradient(to right, #a2ccb6 0%, #fceeb5 50%, #ee786e 100%);
-  background-size: 500%;
-  border: none;
-  border-radius: 5rem;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  color: #fff;
   cursor: pointer;
   font-size: 1em;
-  font-weight: bold;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 3rem;
@@ -40,10 +31,22 @@ button {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  width: 100%;
+  padding: 0 1.5em;
+  border: none;
+  -webkit-appearance: none;
 }
 
-button:hover {
+.button {
+  background: -webkit-gradient(to right, #a2ccb6 0%, #fceeb5 50%, #ee786e 100%);
+  background: linear-gradient(to right, #a2ccb6 0%, #fceeb5 50%, #ee786e 100%);
+  background-size: 500%;
+  border-radius: 5rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  color: #fff;
+  font-weight: bold;
+}
+
+.button:hover {
   animation-name: gradient;
   -webkit-animation-name: gradient;
   animation-duration: 2s;
@@ -52,6 +55,17 @@ button:hover {
   -webkit-animation-iteration-count: 1;
   animation-fill-mode: forwards;
   -webkit-animation-fill-mode: forwards;
+}
+
+.button2 {
+  background-color: transparent;
+  color: #c2c2c2;
+  text-align: center;
+  font-weight: bold;
+}
+
+.button2.active {
+  border-top: solid #a2ccb6 2px;
 }
 
 @keyframes gradient {
@@ -179,17 +193,23 @@ button:hover {
   border-radius: 8px;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
   width: 90%;
-  max-width: 600px;
+  max-width: 700px;
   overflow-y: hidden;
   overflow-x: hidden;
   margin: auto;
+  padding: 0 40px 40px 40px;
+  text-align: center;
+  position: relative;
+  max-height: 100vh;
 }
 .modal-placeholder .modal h1 {
   color: white;
 }
 .modal-placeholder .modal .content {
-  margin: 40px;
   position: relative;
+  display: none;
+  max-height: calc(100vh - 50px);
+  overflow-y: auto;
 }
 .modal-placeholder .modal .content .group {
   position: relative;
@@ -197,6 +217,9 @@ button:hover {
 }
 .modal-placeholder .modal .content textarea {
   resize: none;
+}
+.modal-placeholder .modal .content button {
+  width: 100%;
 }
 .modal-placeholder .modal .content input,
 .modal-placeholder .modal .content textarea {
@@ -234,6 +257,36 @@ button:hover {
   left: 5px;
   top: 10px;
   transition: 300ms ease all;
+}
+.modal-placeholder .modal .content ul {
+  list-style: none;
+  padding: 0;
+}
+.modal-placeholder .modal .content ul li {
+  padding: 10px 0px;
+  text-align: left;
+}
+.modal-placeholder .modal .content ul img {
+  padding: 13px;
+  display: inline;
+  vertical-align: middle;
+}
+.modal-placeholder .modal .content ul input, .modal-placeholder .modal .content ul button {
+  display: inline-block;
+  width: auto;
+}
+.modal-placeholder .modal .content ul button {
+  height: 41px;
+  width: 41px;
+  padding: 10px;
+  border-radius: 5px;
+  float: right;
+}
+.modal-placeholder .modal .content ul input:not(:first-child), .modal-placeholder .modal .content ul button:not(:first-child) {
+  margin-left: 5px;
+}
+.modal-placeholder .modal .show {
+  display: block;
 }
 
 @keyframes animateModal {
